[fix] dropdown-menu min-width to 0 if firstname/lastname too short

--- a/assets/styles/app.scss
+++ b/assets/styles/app.scss
@@ -76,6 +76,10 @@
   width: 100%;
 }
 
+.account.dropdown-menu{
+  --bs-dropdown-min-width: 0 !important;
+}
+
 .account.dropdown-menu.show {
   --bs-border-radius-xl: 0 0 1rem 1rem !important;
   --bs-dropdown-spacer: 0rem !important;
